@@ -4,7 +4,6 @@ import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
-import java.util.Arrays;
 import java.util.List;
 import static org.junit.Assert.assertEquals;
 
@@ -12,20 +11,18 @@ import static org.junit.Assert.assertEquals;
 public class LionTest {
 
     @Mock
-    Feline feline;
+    Lion lion;
 
     @Test
     public void getFoodForLionType() throws Exception {
-        Lion lion = new Lion(true, feline);
-        Mockito.when(feline.getFood("Хищник")).thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
-        List<String> expectedResult = Arrays.asList("Животные", "Птицы", "Рыба");
+        Mockito.when(lion.getFood()).thenReturn(List.of("Животные", "Птицы", "Рыба"));
+        List<String> expectedResult = List.of("Животные", "Птицы", "Рыба");
         List<String> actualResult = lion.getFood();
         assertEquals(expectedResult,actualResult);
 }
     @Test
     public void getKittensForLion() {
-        Lion lion = new Lion(true, feline);
-        Mockito.when(feline.getKittens()).thenReturn(1);
+        Mockito.when(lion.getKittens()).thenReturn(1);
         int actualResult = lion.getKittens();
         assertEquals(1,actualResult);
     }
